# openaugi

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  lancedb.ipynb  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: GETTING_STARTED.md  MCP_SERVER.md  clustering.md  data-model.md  enrichment.md  knowledge-timeline.md  research-agent.md  splitter.md  task-dispatch.md  taxonomy.md
docs/plans/: capture-tag-stream-loop.md  clustering-findings.md  context-block-architecture.md  embedding-research.md  embedding-strategy.md  from-capture-to-jarvis.md  future-work.md  hierarchical-embeddings.md  m0.md  m2-feature-roadmap.md  overall-mvp.md  phase2-compile.md  phase3-adapters.md  vault-config-agent.md
docs/resources/: open-source.md
docs/rfcs/: 0001-voice-note-distillation.md
docs/scratch/: cluster-autoresearch-prompt.md  cluster-next-steps-prompt.md  clustering-approach.md  clustering-session-handoff.md
docs/skills/: heartbeat.md
docs/vision/: values.md
experiments/atomic-idea-extractor/: README.md
experiments/augi-engine-v0/: README.MD  ROADMAP.MD
experiments/augi-mcp/: 01_embed_chunks.ipynb  README.md  explore-claude.ipynb
experiments/embedding_research/: 01_sample_and_label.py  02_linear_probe.py  03_cluster_quality.py  04_visualize.py  05_dense_probe.py  06_within_hub_probe.py  07_length_stratification.py  08_idea_trajectory.py  FINDINGS.md  README.md  review.html
scripts/: check.sh  plot_umaps.py
tests/: conftest.py  test_block.py  test_cluster.py  test_compile.py  test_dispatch.py  test_embed.py  test_heartbeat.py  test_incremental.py  test_link.py  test_mcp.py  test_pipeline.py  test_rerank.py  test_splitter.py  test_store.py  test_stream_manager.py  test_task_watcher.py  test_taxonomy.py  test_vault_adapter.py  test_watcher.py
(+108 files in other folders)
