[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openaugi"
version = "0.1.0"
description = "Self-hostable personal intelligence engine. One pip install. One SQLite file. One MCP server."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Chris", email = "chris@openaugi.com" }]
keywords = ["knowledge-graph", "mcp", "obsidian", "personal-knowledge", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13",
    "mcp>=1.0",
    "numpy>=1.26",
    "openai>=1.0",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
local = ["sentence-transformers>=3.0"]
openai = []  # kept for backwards compat, openai is now a core dependency
ollama = ["httpx>=0.27"]
all = [
    "sentence-transformers>=3.0",
    "openai>=1.0",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pyright>=1.1",
    "pre-commit>=4.0",
]

[project.scripts]
openaugi = "openaugi.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openaugi"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# SQL strings in store are long by nature
"src/openaugi/store/sqlite.py" = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
